--- a/public/css/wysiwyg-overrides.css
+++ b/public/css/wysiwyg-overrides.css
@@ -4,5 +4,5 @@
 
 body .tox-tinymce {
     border-radius:3px;
-    z-index: 10;
+    z-index: 8;
 }
